# macro_dr

./: .clang-format  .clang-format-llvm  .clang-tidy  .clangd  .gitignore  AGENTS.md  CLI_base.h  CLI_function_table.h  CLI_grammar.h  CLI_likelihood.h  CLI_macro_dr.h  CLI_macro_dr_base.h  CLI_macrodr_commands.h  CLI_regular_types.h  CLI_thermo_evidence.h  CLI_thermo_evidence_dts.h  CLI_thermo_evidence_fraction_dts.h  CLI_thermo_levenberg_evidence.h  CLI_theromo_evidence.h  CMakeLists.txt  CMakePresets.json  Maybe_error.h  Moffatt_Hume_2007_ATP_time.txt  README.md  allosteric_models.h  bayesian_linear_regression.h  continuation.h  cuevi.h  derivative_operator.h  derivative_test.h  distributions.h  experiment.h  exponential_matrix.h  fold.h  function_measure_verification_and_optimization.h  function_memoization.h  general_algorithm_on_containers.h  general_output_operator.h  grammar_Identifier.h  grammar_typed.h  (+40 more)
clusters/: capitan.sh  dirac.sh  serafin.sh  tupac.sh
cmake/: GenerateGitCommit.cmake  git_commit.cpp.in  macrodrConfig.cmake.in
command_lines/: run_Evidence.txt  run_Simulation.txt  test_likelihood.txt
discussion/: audios_17_abril.zapia
docs/: 2025_08_27_MacroIR que hacer.txt  2025_08_27_MacroIR y otras yerbas.txt  2025_09_02_MacroIR.txt  2025_09_08_MacroIR.txt  C++ Template Instantiation report.md  CODEBASE_MAP.md  Macro Dr Vision And Realization.docx  Project Roadmap MacroIR.md  Proof_Oriented_Design_Manifesto.md  cli.md  command_registry.md  command_registry_advanced.md  composite_safety_domains.md  contagiously_safe_design.md  general_scientific_software_design_theory.md  provenance_types_hott.md  runtime_vs_semantic_safety_narrative.md  safety_explosion_limit.md  testing.md  testing_cli_recipes.md
experiments/: Moffatt_Hume_2007_ATP.txt  Moffatt_Hume_2007_ATP_Nyquist_experiment.txt  Moffatt_Hume_2007_ATP_time_7.txt  Moffatt_Hume_2007_ATP_time_7_constant_dt.txt  Moffatt_Hume_2007_ATP_time_7_recording.txt  Moffatt_Hume_2007_ATP_time_7_segments.txt  Moffatt_Hume_2007_ATP_time_idealized_1.txt  Moffatt_Hume_2007_ATP_time_idealized_3.txt  Moffatt_Hume_2007_ATP_time_idealized_3.txt.ods  Moffatt_Hume_2007_ATP_time_idealized_3calc.txt.ods  Moffatt_Hume_2007_ATP_time_idealized_segments.txt  Moffatt_Hume_2007_ATP_time_recording.txt  Sim_16288650277403656846_scheme_10_inact_0f15336_072300s883831_7319076573725717296_simulation.csv  Sim_6465237192204259400_scheme_4_inact_NP_N_simulation.csv  Sim_scheme_10_bessel.txt  Sim_scheme_10_simulation.txt  Sim_scheme_9_simulation.txt  sim_scheme_10_bessel.txt
legacy/: CLI_base.h  CLI_function_table.h  CLI_grammar.h  CLI_likelihood.h  CLI_macro_dr.h  CLI_macro_dr_base.h  CLI_regular_types.h  CLI_thermo_evidence.h  CLI_thermo_evidence_dts.h  CLI_thermo_evidence_fraction_dts.h  CLI_thermo_levenberg_evidence.h  abstract_algebra.h  allosteric_models.h  bayesian_linear_regression.h  bootstrap.h  bounds.h  cuevi.h  derivative_fwd.h  derivative_operator.h  derivative_test.h  distributions.h  experiment.h  exponential_matrix.h  fold.h  function_measure_verification_and_optimization.h  function_memoization.h  gauss_newton.h  general_algorithm_on_containers.h  general_output_operator.h  gsl_integrate.h  indexed.h  lapack_headers.h  lapack_schur.h  lgamma.h  matrix.h  matrix_der_traits.h  matrix_derivative.h  matrix_random.h  maybe_error.h  mcmc.h  (+29 more)
models/: MH_Li_inact_9a_5952583459248213227  model00.txt  model00_7_par.csv  model00_7_prior.csv  model00_par.csv  model00_prior.csv  model01_par.csv  model01_prior.csv  model4_g_lin_par.csv  model4_g_lin_prior.csv  model4_par.csv  model4_prior.csv  model6_Eff_no_inactivation_par.csv  model6_Eff_no_inactivation_prior.csv  model6_no_inactivation_par.csv  model6_no_inactivation_prior.csv  model6_par.csv  model6_parameters.csv  model6_prior.csv  model7_par.csv  model7_prior.csv  model8_par.csv  model8_prior.csv  model9_par.csv  model9_prior.csv  model_8_par.csv  model_8_prior.csv  scheme_1.txt  scheme_10_NP.txt  scheme_10_NP_prior.csv  scheme_10_PI_prior.csv  scheme_10_inact_NP.txt  scheme_10_inact_NP_prior.csv  scheme_10_inact_PI_prior.csv  scheme_10_inact_prior.csv  scheme_10_par.csv  scheme_10_prior.csv  scheme_11_NP.txt  scheme_11_NP_par.csv  scheme_11_NP_prior.csv  (+140 more)
models_Ag/: scheme_10.txt  (+132 more)
test_macro_dr/: CMakeLists.txt  tst_cli_likelihood.cpp  tst_cli_macrodr_command.cpp  tst_fractioner.cpp  tst_macror_validation.cpp  tst_poisson_noise_integration.cpp  tst_qdtm.cpp  tst_test_macro_dr.cpp
test_macro_dr/examples/: N_simulation.csv
tests/: CMakeLists.txt
tests/cli/: test_cli_helpers.cpp  test_dsl_core_refactor.cpp  test_env_persistence.cpp  test_indexed.cpp
tests/cmd/: test_simulate_uniformization.cpp  test_write_csv.cpp
tests/data/: Moffatt_Hume_2007_ATP_time_idealized_2.txt  figure_2_indexed.macroir  likelihood_diagnostics_smoke.macroir  likelihood_smoke.macroir  scheme_1_PI_par.csv  scheme_1_inact_PI_par.csv  scheme_CO_small_par.csv  simulate_uniformization_batch_smoke.macroir  simulate_uniformization_smoke.macroir  write_csv_likelihood_broadcast_smoke.macroir  write_csv_likelihood_indexed_smoke.macroir  write_csv_likelihood_overload_smoke.macroir  write_csv_vector_smoke.macroir
tests/io/: test_fingerprint.cpp
tests/io/json/: test_convert.cpp
tests/legacy_v2/catch2/: catch.hpp
tests/legacy_v2/test_macro_dr/: CMakeLists.txt  main.cpp  tst_cli_likelihood.cpp  tst_fractioner.cpp  tst_qdtm.cpp
tests/macroir/: test_dlogLikelihood_equivalence.cpp  test_macroir_derivatives.cpp  test_qdt_derivatives.cpp  test_qdt_eig_vs_taylor.cpp
tests/math/: test_c_h_r_c_h.cpp  test_dcc_matrix.cpp  test_eigensystem_contract.cpp  test_eigs.cpp  test_empty_self_product.cpp  test_idm_eigs.cpp  test_idm_matrix.cpp  test_maybe_error.cpp  test_micro_full.cpp  test_micro_monoid.cpp  test_parlett.cpp  test_probit_statistics.cpp  test_schur.cpp  test_subspace_distortion.cpp  test_taylor_convergence.cpp
tests/microir/: test_micro_derivatives.cpp  test_micro_full_vs_monoid_logL.cpp
tests/optimization/: test_gauss_newton.cpp
tests/test_scripts/: benchmark_script (2).sh  benchmark_script.sh
(+1793 files in other folders)
